--- a/Assignment-1/style.css
+++ b/Assignment-1/style.css
@@ -59,6 +59,8 @@ body{
 .hero h1{
     font-size: 2.6rem; 
     color: #001f29;
+    font-size: clamp(1.5rem, 5vw, 2.6rem);
+
 }
     
 .glow h1{
@@ -99,8 +101,8 @@ body{
 }
 
 @keyframes fadeUp{
-     from {opacity: 0; transform: translateY(50px);}
-  to {opacity: 1; transform: translateY(0);}
+     from {opacity: 0; transfrom: translateY(50px);}
+  to {opacity: 1; transfrom: translateY(0);}
 }
 
 
@@ -316,7 +318,8 @@ aside p{
     transition: transfrom 0.3s ease-in-out;
 }
 
-.section-content, img:hover .content:hover{
+.section-content, img:hover,
+ .content:hover{
     transform: scale(1.05);
 }
 .section-content, .content p{
